# shortest-path-graphicator

./: .gitignore  README.md  README.rst  main.py  pyproject.toml  pytest.ini  setup.py  test.csv  test.dot
routing_simulation/: __init__.py  routing_simulator.py  run_cli.py
routing_simulation/gui/: about_dialog.py  embedded_graph.py  main_window.py
routing_simulation/gui/log/: log.py  log.ui
routing_simulation/gui/send_packet_window/: send_packet_window.py  send_packet_window.ui
routing_simulation/models/: __init__.py  link.py  message.py  network.py  router.py
routing_simulation/tests/: test_Simulador de encaminamiento.py  test_graph_path.py  test_routing_simulator.py
routing_simulation/utils/: __init__.py  binary_utils.py  real_path.py  simulation_patchers.py
