[tool.poetry]
name = "routing_simulation"
version = "0.1.0"
description = "Simulador de envío de paquetes mediante ruta más corta"
authors = ["Alessandro Cuppari <alessandrojcuppari@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
simpy = "^3.0.11"
matplotlib = "^3.1.3"
numpy = "^1.18.1"
pypubsub = "^4.0.3"
pyqt5 = {'file' = './PyQt5-5.14.1-5.14.1-cp35.cp36.cp37.cp38-none-win_amd64.whl'}
networkx = "^2.4"
pydot = "^1.4.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.6"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-faulthandler = "^2.0.1"
pytest-mock = "^2.0.0"
pytest-qt = "^3.3.0"
pytest-xvfb = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
